--- a/PSFree/about.html
+++ b/PSFree/about.html
@@ -19,98 +19,104 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <head>
         <meta charset='utf-8'>
         <title>About PSFree</title>
+		<style>
+			html {
+				background-color: black;
+				color: white;
+			}
+        </style>
     </head>
     <body>
     PSFree is an exploit chain for PS4 and PS5.<br>
-    PSFree is free software. See <a href='./COPYING'>COPYING</a> for the copyleft information.<br>
+    PSFree is free software. See <a href='./COPYING' style='color:red'>COPYING</a> for the copyleft information.<br>
     PSFree's license is GNU-AGPL-3.0-or-later.<br>
     Here is the source code of this program:<br>
     <br>
     HTML files:<br>
-    <a href='./index.html' download>index.html</a><br>
-    <a href='./about.html' download>about.html</a><br>
+    <a href='./index.html' download style='color:red'>index.html</a><br>
+    <a href='./about.html' download style='color:red'>about.html</a><br>
     JavaScript files:<br>
     <table id="jslicense-labels1">
         <tr>
-            <td><a href="./psfree.mjs">psfree.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./psfree.mjs" download>download</a></td>
+            <td><a href="./psfree.mjs" style='color:red'>psfree.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./psfree.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./alert.mjs">alert.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./alert.mjs" download>download</a></td>
+            <td><a href="./alert.mjs" style='color:red'>alert.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./alert.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./config.mjs">config.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./config.mjs" download>download</a></td>
+            <td><a href="./config.mjs" style='color:red'>config.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./config.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./send.mjs">send.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./send.mjs" download>download</a></td>
+            <td><a href="./send.mjs" style='color:red'>send.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./send.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./scripts/lapse.mjs">scripts/lapse.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./scripts/lapse.mjs" download>download</a></td>
+            <td><a href="./scripts/lapse.mjs" style='color:red'>scripts/lapse.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./scripts/lapse.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./rop/800.mjs">rop/800.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./rop/800.mjs" download>download</a></td>
+            <td><a href="./rop/800.mjs" style='color:red'>rop/800.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./rop/800.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/chain.mjs">module/chain.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/chain.mjs" download>download</a></td>
+            <td><a href="./module/chain.mjs" style='color:red'>module/chain.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/chain.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/int64.mjs">module/int64.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/int64.mjs" download>download</a></td>
+            <td><a href="./module/int64.mjs" style='color:red'>module/int64.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/int64.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/view.mjs">module/view.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/view.mjs" download>download</a></td>
+            <td><a href="./module/view.mjs" style='color:red'>module/view.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/view.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/memtools.mjs">module/memtools.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/memtools.mjs" download>download</a></td>
+            <td><a href="./module/memtools.mjs" style='color:red'>module/memtools.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/memtools.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/utils.mjs">module/utils.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/utils.mjs" download>download</a></td>
+            <td><a href="./module/utils.mjs" style='color:red'>module/utils.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/utils.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/rw.mjs">module/rw.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/rw.mjs" download>download</a></td>
+            <td><a href="./module/rw.mjs" style='color:red'>module/rw.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/rw.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/offset.mjs">module/offset.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/offset.mjs" download>download</a></td>
+            <td><a href="./module/offset.mjs" style='color:red'>module/offset.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/offset.mjs" download style='color:red'>download</a></td>
         </tr>
         <tr>
-            <td><a href="./module/mem.mjs">module/mem.mjs</a></td>
-            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU-AGPL-3.0-or-later</a></td>
-            <td><a href="./module/mem.mjs" download>download</a></td>
+            <td><a href="./module/mem.mjs" style='color:red'>module/mem.mjs</a></td>
+            <td><a href="https://www.gnu.org/licenses/agpl-3.0.html" style='color:red'>GNU-AGPL-3.0-or-later</a></td>
+            <td><a href="./module/mem.mjs" download style='color:red'>download</a></td>
         </tr>
     </table>
     kpatch/ files:<br>
-    <a href="./kpatch/utils.h">kpatch/utils.h</a><br>
-    <a href="./kpatch/script.ld">kpatch/script.ld</a><br>
-    <a href="./kpatch/Makefile">kpatch/Makefile</a><br>
-    <a href="./kpatch/80x.c">kpatch/80x.c</a><br>
-    <a href="./kpatch/types.h">kpatch/types.h</a><br>
+    <a href="./kpatch/utils.h" style='color:red'>kpatch/utils.h</a><br>
+    <a href="./kpatch/script.ld" style='color:red'>kpatch/script.ld</a><br>
+    <a href="./kpatch/Makefile" style='color:red'>kpatch/Makefile</a><br>
+    <a href="./kpatch/80x.c" style='color:red'>kpatch/80x.c</a><br>
+    <a href="./kpatch/types.h" style='color:red'>kpatch/types.h</a><br>
     fonts/ files:<br>
-    <a href="./fonts/README.txt">fonts/README.txt</a><br>
-    <a href="./fonts/FONTS.LICENSE">fonts/FONTS.LICENSE</a><br>
-    <a href="./fonts/LiberationMono-Regular.ttf">fonts/LiberationMono-Regular.ttf</a><br>
+    <a href="./fonts/README.txt" style='color:red'>fonts/README.txt</a><br>
+    <a href="./fonts/FONTS.LICENSE" style='color:red'>fonts/FONTS.LICENSE</a><br>
+    <a href="./fonts/LiberationMono-Regular.ttf" style='color:red'>fonts/LiberationMono-Regular.ttf</a><br>
     </body>
 </html>
